# multi-agent-system

./: .gitignore  pyproject.toml
.devcontainer/: .env  app-docker-compose.yml  devcontainer.json  docker-compose.yml  langfuse-docker-compose.yml  litellm_config.yaml
orchestrator/: pyproject.toml
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py
services/researcher_agent/: pyproject.toml
services/researcher_agent/src/researcher_agent/: __init__.py
services/writer_agent/: pyproject.toml
services/writer_agent/src/writer_agent/: __init__.py
