[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "APSAR SHAIK", email = "shaik.apsar@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.8.0",
    "crewai-tools>=1.8.0",
    "litellm>=1.75.3",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
