[project]
name = "researcher-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "APSAR SHAIK", email = "shaik.apsar@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
